trying to fix heading on smaller screens

--- a/custom.css
+++ b/custom.css
@@ -48,6 +48,7 @@ p {
     ;
 }
 
+
 .text-vertical-center {
     text-align: center;
     vertical-align: middle;
@@ -107,3 +108,12 @@ p {
     font-size: 25px;
     box-shadow: 5px 5px 5px grey;
 }
+
+
+@media(min-width:768px){
+      #landing h1 {
+        font-size: 10px;
+      }
+    }
+
+
